--- a/_includes/showcookies.html
+++ b/_includes/showcookies.html
@@ -4,4 +4,4 @@
 
 
 2 - suche:
-<script>function getCookieValue(a) { const b = document.cookie.match('(^|;)\\s*' + a + '\\s*=\\s*([^;]+)'); return b ? b.pop() : ''; } document.write ("getCookieValue " + getCookieValue("cookiereader")); </script>
+<script>function getCookieValue(a) { const b = document.cookie.match('(^|;)\\s*' + a + '\\s*=\\s*([^;]+)'); return b ? b.pop() : ''; } document.write ("getCookieValue " + getCookieValue("cookiefirst-consent")); </script>
